# yumegl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/: game.hpp
assets/shaders/3D/: fragment.glsl
assets/shaders/texture/: fragment.glsl  vertex.glsl
examples/: CameraRD1.example  CameraRD1.txt  FirstPersonControllerExample.ye  Template.example  Template.txt  Texture.example  Texture.txt  cat-runner.txt  catRunner.example  flappy_bat.txt
project/: YumeLists.h  program.hpp
source/: config.h  kernel.cpp  yume_elementary.h  yume_expanded.h  yume_program.hpp
source/dependences/glad/: glad.c  glad.h
source/dependences/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdl3.cpp  imgui_impl_win32.cpp
source/dependences/imgui/examples/example_emscripten_wgpu/: main.cpp
source/dependences/imgui/examples/example_glfw_opengl2/: main.cpp
source/dependences/imgui/examples/example_glfw_opengl3/: main.cpp
source/dependences/imgui/examples/example_glfw_vulkan/: CMakeLists.txt  main.cpp
source/dependences/imgui/examples/example_win32_opengl3/: main.cpp
source/dependences/imgui/misc/single_file/: imgui_single_file.h
source/engine/: engine_properties.hpp  panic_handler.hpp
source/engine/audio/: beep_engine.hpp
source/engine/core/: scene.cpp  scene.hpp
source/engine/input/: input.hpp
source/engine/math/: mathy.hpp
source/engine/render/: graphics.hpp  renderer.cpp  renderer.hpp
source/engine/render/rd/: tex_square.hpp
source/engine/render/rd2/: cube_rd2.hpp  elementary_objects.hpp  square_rd2.hpp
source/engine/shader/: shader.hpp
src/: config.h  kernel.cpp  main.cpp  project.h  source.cpp  yume.h
src/engine/audio/: beep_engine.h  beep_engine.hpp
src/engine/gui/: yumeGui.hpp  yume_imgui.h  yume_imgui.hpp
src/engine/input/: input.h  input.hpp
src/engine/math/: colour.hpp  mathy.h  mathy.hpp
src/engine/objects/: camera.h  camera.hpp
src/engine/rd1/: cube.hpp  square.hpp  texture.hpp  triangle.hpp
src/engine/rd2/: cube_rd2.hpp  cubet.hpp  module.hpp  square_rd2.hpp  squaret.hpp
src/engine/render/: cube.h  cube.hpp  graphics.hpp  material.h  render.hpp  renderer.hpp  square.h  square.hpp  square_module.h  square_template.h  texture.h  texture.hpp  textures.h  triangle.h  triangle.hpp  triangle_modules.h  triangle_template.h
src/engine/render/rd/: tex_square.hpp
src/engine/render/rd1/: cube.hpp  square.hpp  triangle.hpp
src/engine/render/rd2/: cube_rd2.hpp  elementary_objects.hpp  module.hpp  shader.hpp  square_rd2.hpp
src/engine/renderer/: module.hpp
src/engine/shader/: fragment.glsl  fragment.vs  shader.h  shader.hpp  shader2.hpp  vertex.glsl  vertex.vs
src/engine/shader/glshaders/: vertex_t.glsl
src/engine/shader/glshaders/texture/: fragment_t3d.glsl
src/engine/shaders/: shader.h
src/engine/source/: glImprovements.h  gl_improvements.h  panic_handler.hpp  program.hpp  yume_kernel.h  yume_kernel.hpp  yume_math.h  yume_source.hpp
